// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a loading indicator if no data 1`] = `
<LoadingIndicator>
  Fetching Item Options...
</LoadingIndicator>
`;

exports[`renders a loading indicator while running query 1`] = `
<LoadingIndicator>
  Fetching Item Options...
</LoadingIndicator>
`;

exports[`renders an error message when an error occurs 1`] = `
<span>
  Unable to fetch item options.
</span>
`;

exports[`renders cart options when item has no options 1`] = `
<CartOptions
  cartItem={
    Object {
      "configurable_options": Array [],
      "id": 1,
      "product": Object {
        "name": "unit test",
        "price": Object {
          "regularPrice": Object {
            "amount": Object {
              "value": 99,
            },
          },
        },
      },
      "quantity": 1,
    }
  }
  configItem={Object {}}
  endEditItem={[MockFunction]}
/>
`;

exports[`renders cart options when item has options 1`] = `
<CartOptions
  cartItem={
    Object {
      "configurable_options": Array [
        "a",
        "b",
        "c",
      ],
      "id": 1,
      "product": Object {
        "name": "unit test",
        "price": Object {
          "regularPrice": Object {
            "amount": Object {
              "value": 99,
            },
          },
        },
      },
      "quantity": 1,
    }
  }
  configItem={Object {}}
  endEditItem={[MockFunction]}
/>
`;
